--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ target/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
+#.idea/jarRepositories.xml
+#.idea/compiler.xml
 .idea/libraries/
 *.iws
 *.iml
